--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^27.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +24,7 @@
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
+    "jest": "^27.4.5",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0"
   }
